--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_home">Home</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="username">Android Studio</string>
+    <string name="email">android.studio@android.com</string>
+    <string name="icondesc">appicon</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="view_menu">View Menu</string>
+    <string name="order_history">Order History</string>
 </resources>
