--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="username">Android Studio</string>
+    <string name="username">username</string>
     <string name="email">android.studio@android.com</string>
     <string name="icondesc">appicon</string>
+    <string name="name">name</string>
 </resources>
