--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="username">Android Studio</string>
-    <string name="email">android.studio@android.com</string>
+    <string name="username">username</string>
+    <string name="name">name</string>
+    <string name="password">password</string>
+    <string name="login">login</string>
+    <string name="email">some info</string>
     <string name="icondesc">appicon</string>
 
-<!-- TODO: Remove or change this placeholder text -->
     <string name="view_menu">View Menu</string>
     <string name="order_history">Order History</string>
 </resources>
